_sass/pages/_timeline.scss
.node-container {
    padding: $spacing-unit 0;
    .flexbox {
        display: flex;
        align-items: center;
        .node {
            z-index: 2;
            height: 48px;
            width: 48px;
            border-radius: 50%;
            background-color: $brand-color-dark;
        }

        .triangle {
            margin-left: $spacing-unit / 2;
            width: 0;
            height: 0;
            border-top: 12px solid transparent;
            border-bottom: 12px solid transparent;
            border-right: 18px solid $brand-color-light;
        }

        .title {
            padding: 5px 13px;
            background-color: $brand-color-light;
            border-radius: 8px;
            h2 {
                margin: 0;
            }
        }
    }
    .content {
        padding-top: $spacing-unit / 2;
        padding-left: 48px + ($spacing-unit / 2) + 8px + 18px;
    }
}

.timeline-container {
    .timeline {
        margin-top: $spacing-unit * 1.5;
        margin-left: 14px;
        border-bottom-right-radius: 10px;
        border-bottom-left-radius: 10px;
        width: 20px;
        background-color: $brand-color-light;
        position: absolute;
    }
}

